--- a/template.html
+++ b/template.html
@@ -6,8 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-    <base href="https://playsignage.github.io/gsap-how-to-advanced/" />
-		<link rel="manifest" href="/manifest.json">
+		<link rel="manifest" href="gsap-how-to-advanced/manifest.json">
 		<% if (htmlWebpackPlugin.options.manifest.theme_color) { %>
 			<meta name="theme-color" content="<%= htmlWebpackPlugin.options.manifest.theme_color %>">
 		<% } %>
@@ -15,18 +14,18 @@
 		 <% if (chunk.names.length === 1 && chunk.names[0] === 'polyfills') continue; %>
 			<% for (var file of chunk.files) { %>
 				<% if (htmlWebpackPlugin.options.preload && file.match(/\.(js|css)$/)) { %>
-					<link rel="preload" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>">
+					<link rel="preload" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="gsap-how-to-advanced/<%= file.match(/\.css$/)?'style':'script' %>">
 				<% } else if (file.match(/manifest\.json$/)) { %>
-					<link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath + file %>">
+					<link rel="manifest" href="gsap-how-to-advanced/<%= htmlWebpackPlugin.files.publicPath + file %>">
 				<% } %>
 			<% } %>
 		<% } %>
 	</head>
 	<body>
 		<%= htmlWebpackPlugin.options.ssr({
-			url: '/'
+			url: 'gsap-how-to-advanced/'
 		}) %>
-		<script defer src="<%= htmlWebpackPlugin.files.chunks['bundle'].entry %>"></script>
-		<script>window.fetch||document.write('<script src="<%= htmlWebpackPlugin.files.chunks["polyfills"].entry %>"><\/script>')</script>
+		<script defer src="gsap-how-to-advanced<%= htmlWebpackPlugin.files.chunks['bundle'].entry %>"></script>
+		<script>window.fetch||document.write('<script src="gsap-how-to-advanced/<%= htmlWebpackPlugin.files.chunks["polyfills"].entry %>"><\/script>')</script>
 	</body>
 </html>
